Bug 93098 - Unexpectedly quit when use Data->Sort (crash)
Summary: Unexpectedly quit when use Data->Sort (crash)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.5.2 release
Hardware: x86 (IA32) All
: high critical
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.1.0 target:5.0.2 target:4.4.6
Keywords: bibisected, regression
: 92787 93356 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-03 12:33 UTC by Viruch Hemapanpairo
Modified: 2016-10-25 19:21 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
a template file without any confidential data (45.26 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-08-04 12:51 UTC, Viruch Hemapanpairo
Details
valgrind log (16.15 KB, text/x-log)
2015-08-12 15:45 UTC, Caolán McNamara
Details
Document that also makes LibO crash when sorting (34.85 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-10-31 19:31 UTC, Grobe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Viruch Hemapanpairo 2015-08-03 12:33:34 UTC
The program will unexpectedly quit when executed the feature Data->Sort with any criteria. The problem has occur since LibO 4.4.4 and still be there even in LibO 4.4.5.

OS = Lubuntu 14.04
HW = Lenovo T430 with 4GB memory
Comment 1 raal 2015-08-03 15:16:09 UTC Comment hidden (obsolete)
Comment 2 Viruch Hemapanpairo 2015-08-04 12:51:54 UTC
Created attachment 117642 [details]
a template file without any confidential data

Here is the file that has been used since the very early version of OopenOffice through LibreOffice 4.4.3 with no problem on sorting with Column A
Comment 3 raal 2015-08-04 13:29:29 UTC
cannot reproduce the crash with Version: 5.1.0.0.alpha1+
Build ID: 2d9db406d301d722649ca539cacad823b89191ca
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-07-31_00:59:07

Please write exact steps how to reproduce, thanks
Comment 4 Viruch Hemapanpairo 2015-08-04 13:55:24 UTC
1. Select cells from A7:BF61
2. Use Data->Sort with the Sort Key 1 = Column A in Ascending Order
3. OK

LibO 4.4.4 and LibO 4.4.5 will unexpectedly quit from that point.
Comment 5 raal 2015-08-04 15:11:50 UTC
I can reproduce the crash with Version: 5.1.0.0.alpha1+
Build ID: 2d9db406d301d722649ca539cacad823b89191ca
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-07-31_00:59:07

I can reproduce crash with Verze: 5.0.0.5 (x64)
ID sestavení: 1b1a90865e348b492231e1c451437d7a15bb262b, win7
Comment 6 Michael Weghorn 2015-08-07 23:00:46 UTC
bibisect result (using the lo-linux-dbgutil-daily repository):

There are only 'skip'ped commits left to test.
The first bad commit could be any of: 5cb97ad9fa3ab610defbf69382c860740a4117d3 1f8ef21cd72a4e63719a1bbb65d321a56ed80e88 781479cf48e9cd137a4224ea0842af6d4fbba1c7 2ff6fad6384c0192ea61bd9a163c8df3818ba8b3 a814cee0b38cabf6a0c042e9bcc616c8d96cac0f 477d94b8ebfe939c7a2864e9e9b09a1e5b628f03 d2fd284bede0e9cfd042f71211577d1d15c5e509 d3328123e5e86a74111ff9f1fcdd742973bd3c80
We cannot bisect more!

--- 
$ git bisect log
# bad: [b7c3770284bdfd1eb7f7e87f30c745dabd333bfa] 2015-08-07: source-hash-09a9234c021ad98c5adeb493b5814e97b92ee912
# good: [2b392af9c8f54629e3a3a98a8c92fa5af1c6722f] 2015-05-20: source-hash-90e2dabb8d0bb5382234be776c2ad0e2d5d9e224
git bisect start 'b7c3770284bdfd1eb7f7e87f30c745dabd333bfa' '2b392af9c8f54629e3a3a98a8c92fa5af1c6722f'
# bad: [4b90d0d97edcca75ff6e132d5e5cb46f51b6fa4c] 2015-06-28: source-hash-94f29d82af27b757e716a50cd260f7428e0a2679
git bisect bad 4b90d0d97edcca75ff6e132d5e5cb46f51b6fa4c
# skip: [5cb97ad9fa3ab610defbf69382c860740a4117d3] 2015-06-08: source-hash-e2e058d450c1d2fdc6230933ec66c037971b9aea
git bisect skip 5cb97ad9fa3ab610defbf69382c860740a4117d3
# good: [587d15ec717aed5d4abe657f3a96d4de29565bc7] 2015-06-01: source-hash-e61fcfea5c2a306e44a053976e921160e78917ac
git bisect good 587d15ec717aed5d4abe657f3a96d4de29565bc7
# bad: [772f8de044b2b1fe74371904f3c48e6e34f23b6a] 2015-06-14: source-hash-ad84b40b084cb6c6c129c687303fb863b8b3f746
git bisect bad 772f8de044b2b1fe74371904f3c48e6e34f23b6a
# skip: [1f8ef21cd72a4e63719a1bbb65d321a56ed80e88] 2015-06-07: source-hash-47cddc662efc470505f0b76427fa3092bae5550a
git bisect skip 1f8ef21cd72a4e63719a1bbb65d321a56ed80e88
# good: [8d4474d6d255ef57a1b4b86653d7edf26b676494] 2015-06-04: source-hash-8ae25bbc092254f680e2976873f15bdbc26615ef
git bisect good 8d4474d6d255ef57a1b4b86653d7edf26b676494
# skip: [781479cf48e9cd137a4224ea0842af6d4fbba1c7] 2015-06-09: source-hash-d28102b1ed0c31500bbc68453a7b7613bd2bfa06
git bisect skip 781479cf48e9cd137a4224ea0842af6d4fbba1c7
# bad: [d3328123e5e86a74111ff9f1fcdd742973bd3c80] 2015-06-12: source-hash-bb9dad2ef23829b2500c9f99154bca6a8ba7d49a
git bisect bad d3328123e5e86a74111ff9f1fcdd742973bd3c80
# skip: [a814cee0b38cabf6a0c042e9bcc616c8d96cac0f] 2015-06-10: source-hash-782c116b5ac39aef27c3a00f7fc145c9f755e3a3
git bisect skip a814cee0b38cabf6a0c042e9bcc616c8d96cac0f
# skip: [2ff6fad6384c0192ea61bd9a163c8df3818ba8b3] 2015-06-06: source-hash-587006cac508616f486aea45e265a170bcccdc87
git bisect skip 2ff6fad6384c0192ea61bd9a163c8df3818ba8b3
# skip: [477d94b8ebfe939c7a2864e9e9b09a1e5b628f03] 2015-06-11: source-hash-c8344322a7af75b84dd3ca8f78b05543a976dfd5
git bisect skip 477d94b8ebfe939c7a2864e9e9b09a1e5b628f03
# skip: [d2fd284bede0e9cfd042f71211577d1d15c5e509] 2015-06-05: source-hash-856233d2ef20ba0f4118edd475308bd59442068c
git bisect skip d2fd284bede0e9cfd042f71211577d1d15c5e509
# only skipped commits left to test
# possible first bad commit: [d3328123e5e86a74111ff9f1fcdd742973bd3c80] 2015-06-12: source-hash-bb9dad2ef23829b2500c9f99154bca6a8ba7d49a
# possible first bad commit: [477d94b8ebfe939c7a2864e9e9b09a1e5b628f03] 2015-06-11: source-hash-c8344322a7af75b84dd3ca8f78b05543a976dfd5
# possible first bad commit: [a814cee0b38cabf6a0c042e9bcc616c8d96cac0f] 2015-06-10: source-hash-782c116b5ac39aef27c3a00f7fc145c9f755e3a3
# possible first bad commit: [781479cf48e9cd137a4224ea0842af6d4fbba1c7] 2015-06-09: source-hash-d28102b1ed0c31500bbc68453a7b7613bd2bfa06
# possible first bad commit: [5cb97ad9fa3ab610defbf69382c860740a4117d3] 2015-06-08: source-hash-e2e058d450c1d2fdc6230933ec66c037971b9aea
# possible first bad commit: [1f8ef21cd72a4e63719a1bbb65d321a56ed80e88] 2015-06-07: source-hash-47cddc662efc470505f0b76427fa3092bae5550a
# possible first bad commit: [2ff6fad6384c0192ea61bd9a163c8df3818ba8b3] 2015-06-06: source-hash-587006cac508616f486aea45e265a170bcccdc87
# possible first bad commit: [d2fd284bede0e9cfd042f71211577d1d15c5e509] 2015-06-05: source-hash-856233d2ef20ba0f4118edd475308bd59442068c

In the skipped commits, LibreOffice does not start when I give the file as argument. Error message:
"Component cannot be loaded, possibly broken or incomplete installation.
Full error message:

 loading component library <file:///home/michi/development/lo-bibisecting/lo-linux-dbgutil-daily/opt/program/../program/libsclo.so> failed."
Comment 7 Caolán McNamara 2015-08-12 15:45:31 UTC
Created attachment 117864 [details]
valgrind log
Comment 8 Caolán McNamara 2015-08-12 15:47:06 UTC
use after delete, where the delete happens in the bowels of mdds I suppose
Comment 9 Eike Rathke (retired, only occasionally showing up) 2015-08-13 14:49:22 UTC
Taking.
Comment 10 Commit Notification 2015-08-13 16:43:12 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea29d320754fdb21b336cb78f816b8081371def9

Resolves: tdf#93098 replace remembered listener when replacing cell

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Eike Rathke (retired, only occasionally showing up) 2015-08-13 17:21:50 UTC
Pending review
https://gerrit.libreoffice.org/17726 for 5-0
 for 4-4
Comment 12 Eike Rathke (retired, only occasionally showing up) 2015-08-13 17:22:51 UTC
https://gerrit.libreoffice.org/17727 for 4-4
Comment 13 Viruch Hemapanpairo 2015-08-17 04:42:18 UTC
Just try LibO dailry build 2015-08-16. The problem still occur as reported.
Comment 14 Eike Rathke (retired, only occasionally showing up) 2015-08-17 08:23:52 UTC
@Viruch:
Could you please indicate what build you used exactly and quote the build information (specifically the commit hash (Build ID)) of the About box here?
Also, could you retry with a later build?
Thanks.
Comment 15 Commit Notification 2015-08-17 10:50:57 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7cbcde5e8727b84b4d3ca9f80020082644d9638a&h=libreoffice-5-0

Resolves: tdf#93098 replace remembered listener when replacing cell

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Viruch Hemapanpairo 2015-08-17 11:30:15 UTC
@Eike
Just download and try:
Version: 5.0.2.0.0+
Build ID: d510b85aa5e1c51f5bf4e08edf47725a7a75ce04
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:libreoffice-5-0,
Time: 2015-08-17_07:48:58
Locale: en-US (en_US.UTF-8)

The problem are still not resolved. Awaiting the next build and will try it again.

Thank you very much
Comment 17 Commit Notification 2015-08-17 12:33:48 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbf080ab3ff57da62820c9a0ac42974dae91b3a3&h=libreoffice-4-4

Resolves: tdf#93098 replace remembered listener when replacing cell

It will be available in 4.4.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Eike Rathke (retired, only occasionally showing up) 2015-08-17 13:03:41 UTC
(In reply to Viruch Hemapanpairo from comment #16)
> Version: 5.0.2.0.0+
> Build ID: d510b85aa5e1c51f5bf4e08edf47725a7a75ce04

It can't be fixed there because 5-0-2 did not have a corresponding commit. Please observe the bugs' Whiteboard target:... entries and the Commit Notification comments where commits to specific branches are announced.

So, today a commit on branch 5-0-2 was done for 5.0.2 and one of the next builds should have that.
Comment 19 Viruch Hemapanpairo 2015-08-19 04:43:41 UTC
Already try the newly build:
Version: 5.0.2.0.0+
Build ID: a23d5bc8bb3c43f31d2d66fcac0d28e273d948a8
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:libreoffice-5-0, Time: 2015-08-18_20:14:52
Locale: en-US (en_US.UTF-8)

The problem is already solved. Thank you very much.

Viruch H.
Comment 20 raal 2015-08-20 09:52:05 UTC
*** Bug 92787 has been marked as a duplicate of this bug. ***
Comment 21 ecarter 2015-08-30 15:15:26 UTC
Had issues with the sort not working in 5.0.1.2 in both Ubuntu and Windows XP. On a simple but repeatable test confirmed to work with version 5.0.2.0.0+ in both Windows and Ubuntu. But with a larger more complex sheet it still fails on the Debian version in Ubuntu but works OK in the Windows version.
Work around is to delete everything but column A (the sort column) and then sort. Undo the sort and the delete and then sort on column A will work.
Comment 22 gekacheka 2015-09-03 16:12:52 UTC
*** Bug 93356 has been marked as a duplicate of this bug. ***
Comment 23 Elmar 2015-09-05 04:42:35 UTC
I do want to say this, that it may be that the the Bug 93356 is a duplicate of bug 93098, but what is different is that the files I have been working with have been in use for at least 5 years and have never given a problem in the stable versions of LO. I struck it the first time in LO 5.

By fiat, I have to work in Excel as well (because almost all of the communities I share data with are Excel users.

However, I have waited a long time for some functions in LO (especially like being able to reference rows and columns as 1:1, A:A)

I don't want to have different versions of LO because of the difficulty maintaining them, which is why I installed OpenOffice to test with version 4.

Howe close is LO 5.1 to stable?
Comment 24 Viruch Hemapanpairo 2015-09-05 09:33:32 UTC
@Elma

As they informed here that the bug will be solved within v5.1.0, v5.0.2, and v4.4.6. Thus, the soonest you can have one stable version with no affect of this bug would be around the week 39 (September 21-27, 2015, which will be v5.0.2. While v4.4.6 will be released later on around the week 43 (October 19-25, 2015).

Anyway, I don't have any information of 5.1.0 as they haven't published their release plan yet.

(reference : https://wiki.documentfoundation.org/ReleasePlan )
Comment 25 Elmar 2015-09-07 15:28:52 UTC
(In reply to Viruch Hemapanpairo from comment #24)
> @Elma
> 
> As they informed here that the bug will be solved within v5.1.0, v5.0.2, and
> v4.4.6. Thus, the soonest you can have one stable version with no affect of
> this bug would be around the week 39 (September 21-27, 2015, which will be
> v5.0.2. While v4.4.6 will be released later on around the week 43 (October
> 19-25, 2015).
> 
> Anyway, I don't have any information of 5.1.0 as they haven't published
> their release plan yet.
> 
> (reference : https://wiki.documentfoundation.org/ReleasePlan )

Thanks! :-)
Comment 26 Grobe 2015-10-31 19:31:57 UTC
Created attachment 120147 [details]
Document that also makes LibO crash when sorting

This document will also cause Libre Office to crash when sorting.
Just select range A1:M28 and try any sort, crash...

Work well in earlier version of Libre Office:
I also tested the same document on Version: 4.3.7.2 - Sorting is done successfully, no crash.
Comment 27 raal 2015-10-31 21:41:57 UTC
(In reply to Grobe from comment #26)
> Created attachment 120147 [details]
> Document that also makes LibO crash when sorting
> 
> This document will also cause Libre Office to crash when sorting.
> Just select range A1:M28 and try any sort, crash...
> 
> Work well in earlier version of Libre Office:
> I also tested the same document on Version: 4.3.7.2 - Sorting is done
> successfully, no crash.

This bug is fixed, try to use Lo version 4.4.6 or 5.0.2
Comment 28 Elmar 2015-11-01 03:55:40 UTC
I can confirm that I have had no sorting issues any more (v5.0.2 last version used)

When a problem is fixed. Is this kind of comment useful? or does one just say nothing?
Comment 29 raal 2015-11-01 08:41:52 UTC
(In reply to Elmar from comment #28)
> I can confirm that I have had no sorting issues any more (v5.0.2 last
> version used)
> 
> When a problem is fixed. Is this kind of comment useful? or does one just
> say nothing?

Setting as verified.
Comment 30 geek2go 2015-11-18 20:46:44 UTC
It works!
Comment 31 Robinson Tryon (qubit) 2015-12-17 10:30:20 UTC Comment hidden (obsolete)