Resolves: tdf#93098 replace remembered listener when replacing cell

... where SvtListener* is the base of ScFormulaCell* and lead to use
after delete.

Change-Id: I45b8e16f05cf5d4d0d4858dc9cd0c748f8184978